Don't double reference items created following a model reset.

If the model was reset then regenerate and exit immediately rather
than processing the change set.

Task-number: QTBUG-26536
Change-Id: I9d4f20d450a5116957c9468ba6088caad026a497
Reviewed-by: Martin Jones <martin.jones@nokia.com>